<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="wrap_content" 
 	android:layout_height="wrap_content">
 
 	<LinearLayout 	xmlns:android="http://schemas.android.com/apk/res/android"
			    	android:orientation="horizontal"
   		 			android:layout_width="fill_parent"
    				android:layout_height="wrap_content"
    				android:id="@+id/AppLayout">
 
		    <ImageView
				android:id="@+id/SolIcon"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			   	android:layout_gravity="center_vertical"
			   	android:padding="10dp"
			   	android:src="@drawable/icon"
				/>
		 
			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			    android:orientation="vertical"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			   	android:layout_gravity="center_vertical"
			   	android:paddingLeft="10dp"
			    android:layout_weight="1"
			    >
		 
			    <TextView android:id="@+id/SolAppName"
			    	 android:text="@string/app_name"
			         android:layout_width="fill_parent"
			         android:layout_height="fill_parent"
			         android:textSize="16sp"
			         android:textStyle="bold"
			         />
		 
			    <TextView android:id="@+id/SolVersion"
			     	 android:text="@string/about_version"
			         android:layout_width="fill_parent"
			         android:layout_height="fill_parent"
			         android:textSize="10sp"
			         />
		    </LinearLayout>
	</LinearLayout>
  		
  	<ScrollView android:id="@+id/ScrollView01"
 				android:layout_width="fill_parent" 
 				android:layout_below="@+id/AppLayout"
 				android:layout_height="100dp">		 
		<TextView 
		android:text="@string/about_app" 
		android:id="@+id/TextView01"
		android:padding="10dp"
		android:textSize="12sp"
		android:layout_below="@+id/AppLayout"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" />
	</ScrollView>
 
 	<LinearLayout 	xmlns:android="http://schemas.android.com/apk/res/android"
			    	android:orientation="horizontal"
   		 			android:layout_width="fill_parent"
    				android:layout_height="wrap_content"
    				android:layout_below="@+id/ScrollView01"
    				android:id="@+id/ActionLayout">
    				<Button 
				 		android:id="@+id/AboutOk" 		
				 		android:layout_width="wrap_content" 
				 		android:layout_height="wrap_content"
				 		android:text="@string/about_ok"
				 		android:layout_weight="1"
				 		android:layout_centerHorizontal="true" />
   	</LinearLayout>	
</RelativeLayout>